# Flux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
Flux/: CMakeLists.txt
Flux/engine/: 3DRenderer.cpp  3DRenderer.h  Model.cpp  Model.h  Textureloader.cpp  Textureloader.h  Window.cpp  Window.h  luaEngine.cpp  luaEngine.h  runtime.cpp  runtime.h
Flux/engine/gui/viewport/: explorer.cpp  explorer.h  heiarchy.cpp  heiarchy.h  output.cpp  output.h  properties.cpp  ribbon.cpp  ribbon.h  viewport.cpp  viewport.h
Flux/engine/mechanics/: Scenenode.h
Flux/templates/File_Templates/scripts/: TemplateScript.lua
Flux/templates/Project_Templates/base_game_folder_lua/: main.lua
docs/: luaAPI.md
